# archie

./: .gitignore  Caddyfile  Dockerfile  LICENSE  alembic.ini  default.toml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  main.yml
alembic/: env.py
alembic/versions/: 328d883c2a12_add_clip.py  afd1b759e609_init_tables.py
archie/: bot.py  database.py  main.py  tasks.py  web.py
