[tool.poetry]
name = "archie"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
typer = "^0.2.1"
aiofiles = "^0.5.0"
arrow = "^0.15.6"
ipython = "^7.14.0"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
